--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <header class="boxContainer">
 
       <h1 class="hidden">Main Navigation</h1>
-
       <section class="box mainNavigation">
         <!-- <button id="button"></button> -->
         <div class="burgerCon">
@@ -35,6 +34,8 @@
           </ul>
         </div>
       </section>
+      
+      <h1 class="hidden">Logo Image</h1>
       <section class="box LogoImage">
         <div class="logo">
           <h2>Logo</h2>
